# tamart

./: .env  .gitignore  README.md  build_site_assets.py  index.html  pyproject.toml
assets/data/: index.json
assets/data/paintings/: 0001_mona-lisa.json  0002_the-starry-night-1889.json  0003_in-bed-the-kiss-1892.json  0004_the-birth-of-venus-1485.json  0005_the-two-fridas-1939.json  0006_school-of-athens-detail-from-right-hand-side-showing-diogenes-on-the-steps-and-euclid-1511.json  0010_impression-sunrise.json  0011_still-life-with-bottle-and-apple-basket-1894.json  0012_job-1896.json  0014_the-luncheon-on-the-grass-1863.json  0016_the-garden-of-earthly-delights-1515-7.json  0029_the-scream-1893.json  0030_dante-and-virgil-1850.json  0033_netherlandish-proverbs-1559.json  0044_the-girl-with-a-pearl-earring.json  0049_three-women-1921.json  0062_the-last-supper-1495.json  0066_the-triumph-of-death-1562-1.json  0073_the-beethoven-frieze-the-hostile-powers-far-wall-1902-1.json  0084_queen-elizabeth-ii-2001.json  0090_the-madonna-of-the-carnation.json  0097_gargantua-1831.json  0101_on-white-ii-1923.json  0104_the-proportions-of-the-human-figure-the-vitruvian-man-1492.json  0115_fuji-mountains-in-clear-weather-1831.json  0117_ascending-descending.json  0125_medusa-1597-1.json  0132_paradise-lost-3.json  0133_madonna-litta-madonna-and-the-child.json  0135_lamentation-the-mourning-of-christ-1306-1.json  0164_christmas-santa-reading-mail-1935.json  0170_van-gogh-painting-sunflowers-1888.json  0177_adoration-of-the-magi-1476-1.json  0178_composition-with-oval-in-color-planes-ii-1914.json  0180_compassion-1897.json  0187_the-virgin-of-the-rocks.json  0192_saint-francis-of-assisi-detail.json  0196_judgment-during-the-russian-pravda-1890.json  0202_venus-and-mars-1483-1.json  0208_the-wrestle-of-jacob-1855.json  (+110 more)
css/: style.css
examples/: demo.py  eval.py
js/: app.js
launches/: classify.sh  describe.sh  segment.sh  validate_meta.sh
notebooks/: demo.ipynb  exp1.ipynb  fp8_smoke_test.ipynb  viz.ipynb  vllm_qwen3_smoke.ipynb
src/tamart/: __init__.py
src/tamart/data/: annotate.py  check.py  download.py
src/tamart/experiments/: classify.py  describe.py  segment.py  validate_meta.py
src/tamart/method/: compute.py
src/tamart/tam/: __init__.py  core.py  eval.py  explainer.py
