[project]
name = "tamart"
version = "0.1.0"
description = "Token Activation Map (TAM) explainability for Multimodal LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitz>=0.0.1.dev2",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pathlib>=1.0.1",
    "pymupdf>=1.27.2.3",
    "rouge>=1.0.1",
    "scipy>=1.17.1",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "transformers==4.52.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tamart"]
